Fixed navbar on mobile screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -209,16 +209,6 @@ body {
     }
 }
 
-@media (max-width: 480px) {
-    .nav-links {
-        flex-direction: column;
-    }
-
-    .navbar {
-        padding: 5px 0;
-    }
-}
-
 /* Hamburger Menu */
 .hamburger {
     display: none;
